# AcademicLint

./: .bandit  .dockerignore  .editorconfig  .env.example  .pre-commit-config.yaml  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EVALUATION.md  LICENSE-SUMMARY.md  LICENSE.md  Makefile  PRIVACY.md  README.md  REFOCUS_PLAN.md  SECURITY.md  SECURITY_AUDIT.md  SPEC.md  SUPPORT.md  claude.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  step-by-step.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
config/: default.yaml  development.yaml  production.yaml  staging.yaml
docs/: VERSIONING.md  api-reference.md  architecture.md  code-audit.md  configuration.md  domains.md  faq.md  getting-started.md  openapi.yaml  postman_collection.json  self-hosting.md  troubleshooting.md
docs/api/: README.md  postman_collection.json
examples/: basic_usage.py  custom_domain.py
examples/ci_integration/: github-action.yml  pre-commit.yaml
scripts/: build.bat  build.sh  bump_version.py  package.sh  static_analysis.sh
src/academiclint/: __init__.py  __main__.py  version.py
src/academiclint/api/: __init__.py  app.py  routes.py  schemas.py
src/academiclint/cli/: __init__.py  check.py  main.py  serve.py  setup.py
src/academiclint/core/: __init__.py  config.py  environments.py  exceptions.py  linter.py  parser.py  pipeline.py  result.py
src/academiclint/density/: __init__.py  calculator.py
src/academiclint/detectors/: __init__.py  base.py  causal.py  circular.py  citation.py  filler.py  hedge.py  jargon.py  vagueness.py  weasel.py
src/academiclint/domains/: __init__.py  loader.py  manager.py
src/academiclint/domains/builtin/: computer-science.yml  philosophy.yml
src/academiclint/formatters/: __init__.py  base.py  github.py  html.py  json_.py  markdown.py  terminal.py
src/academiclint/models/: __init__.py  cache.py  manager.py
src/academiclint/utils/: __init__.py  env.py  error_reporting.py  logging.py  metrics.py  patterns.py  text.py  validation.py
tests/: __init__.py  conftest.py  test_acceptance.py  test_config.py  test_density.py  test_env.py  test_exceptions.py  test_integration_api.py  test_integration_linter.py  test_linter.py  test_performance.py  test_regression.py  test_security.py  test_validation.py
tests/calibration/: test_baseline_measurement.py  test_density_calibration.py
tests/fixtures/: sample_bad.md  sample_good.md
tests/fixtures/real_papers/: __init__.py
tests/test_detectors/: test_causal.py  test_circular.py  test_citation.py  test_filler.py  test_hedge.py  test_jargon.py  test_real_sentences.py  test_vagueness.py  test_weasel.py
tests/test_e2e_pipeline/: __init__.py  conftest.py  sample_texts.py  test_formatters_pipeline.py  test_full_pipeline.py
