[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "academiclint"
version = "0.1.0"
description = "Semantic clarity analyzer for academic writing"
readme = "README.md"
license = {text = "Polyform-Small-Business-1.0.0"}
requires-python = ">=3.11"
authors = [
    {name = "AcademicLint Team", email = "kase1111@gmail.com"},
]
keywords = [
    "academic",
    "writing",
    "linting",
    "nlp",
    "clarity",
    "semantic",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "spacy>=3.7.0,<4.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "types-PyYAML>=6.0.0",
]
all = [
    "academiclint[api,dev]",
]

[project.scripts]
academiclint = "academiclint.cli.main:cli"

[project.urls]
Homepage = "https://github.com/kase1111-hash/academiclint"
Documentation = "https://docs.academiclint.dev"
Repository = "https://github.com/kase1111-hash/academiclint.git"
Issues = "https://github.com/kase1111-hash/academiclint/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/academiclint"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true
pretty = true
files = ["src/academiclint"]
exclude = ["tests/", "docs/"]

[[tool.mypy.overrides]]
module = "spacy.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "PTH",  # flake8-use-pathlib
    "PL",   # pylint
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # assert usage (ok in tests)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "PLR2004"]
"src/academiclint/cli/**/*.py" = ["T20"]

[tool.ruff.lint.isort]
known-first-party = ["academiclint"]

[tool.ruff.lint.pylint]
max-args = 8

[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = ["B101"]  # assert_used - ok for validation
targets = ["src/academiclint"]

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]

[tool.coverage.run]
source = ["src/academiclint"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 70
show_missing = true
